rabbitmq-old.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    autopilot.gke.io/resource-adjustment: '{"input":{"containers":[{"limits":{"cpu":"500m","memory":"512Mi"},"requests":{"cpu":"150m","memory":"256Mi"},"name":"rabbitmq"}]},"output":{"containers":[{"limits":{"cpu":"500m","ephemeral-storage":"1Gi","memory":"512Mi"},"requests":{"cpu":"150m","ephemeral-storage":"1Gi","memory":"256Mi"},"name":"rabbitmq"}]},"computeClassAtAdmission":"Default","modified":true}'
    autopilot.gke.io/warden-version: 34.45.0-gke.3
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"rabbitmq"},"name":"rabbitmq","namespace":"panda-ev"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"rabbitmq"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"labels":{"app":"rabbitmq"}},"spec":{"containers":[{"image":"asia-southeast1-docker.pkg.dev/pandaev/panda-ev-repo/rabbitmq:dev","imagePullPolicy":"Always","livenessProbe":{"exec":{"command":["rabbitmq-diagnostics","status"]},"fai [...]
  creationTimestamp: "2026-03-16T04:07:25Z"
  generation: 3
  labels:
    app: rabbitmq
  name: rabbitmq
  namespace: panda-ev
  resourceVersion: "1776053234459519016"
  uid: e12c209b-265f-4762-beea-2129e7f6efe4
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-04-13T11:06:34+07:00"
      labels:
        app: rabbitmq
    spec:
      containers:
      - image: asia-southeast1-docker.pkg.dev/pandaev/panda-ev-repo/rabbitmq:dev
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - rabbitmq-diagnostics
            - status
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 15
        name: rabbitmq
        ports:
        - containerPort: 5672
          name: amqp
          protocol: TCP
        - containerPort: 15672
          name: management
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - rabbitmq-diagnostics
            - check_port_connectivity
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 512Mi
          requests:
            cpu: 150m
            ephemeral-storage: 1Gi
            memory: 256Mi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: rabbitmq-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: kubernetes.io/arch
        operator: Equal
        value: amd64
      volumes:
      - name: rabbitmq-data
        persistentVolumeClaim:
          claimName: rabbitmq-data-pvc
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-04-13T04:07:14Z"
    lastUpdateTime: "2026-04-13T04:07:14Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-03-16T07:28:08Z"
    lastUpdateTime: "2026-04-13T04:07:14Z"
    message: ReplicaSet "rabbitmq-86ccd7f5cf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
